Change layout slightly

--- a/templates/library.html
+++ b/templates/library.html
@@ -4,9 +4,12 @@
 <div class="library-container">
   <div class="col-md-12">
       <div class="row">
-        <div class="col-md-10">
-
-    <h1 style="margin-top: 00px;">{{library.name}}</h1>
+        <div class="col-md-12">
+          <h1 style="margin-top: 00px;">{{library.name}}</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-9">
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
@@ -27,9 +30,9 @@
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       {{/library.gratipay}}
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <a href="//www.bluehost.com/track/cdnjs/intro" target="_blank">
-            <img id="intro-image" border="0" src="//bluehost-cdn.com/media/partner/images/cdnjs/120x120/bh-ppc-banners-dynamic-120x120.png">
+            <img id="intro-image" border="0" src="//bluehost-cdn.com/media/partner/images/cdnjs/189x116/bh-ppc-banners-dynamic-189x116.png">
           </a>
         </div>
       </div>
