Revert "PR#90 and PR#91"
This reverts commits:
- 9a6e2b18e512e2a3ba7781087fc64ba03ea7e912
- 899e0eac95d1c0348537bfc83a6636461efbc4e3

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
-    <link rel="dns-prefetch" href="//bluehost-cdn.com" />
+    <link rel="dns-prefetch" href="//cdn.carbonads.com" />
   </head>
 
   <body>
