--- a/templates/library.html
+++ b/templates/library.html
@@ -4,12 +4,9 @@
 <div class="library-container">
   <div class="col-md-12">
       <div class="row">
-        <div class="col-md-12">
-          <h1 style="margin-top: 00px;">{{library.name}}</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-8">
+
+    <h1 style="margin-top: 00px;">{{library.name}}</h1>
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
@@ -30,10 +27,9 @@
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       {{/library.gratipay}}
         </div>
-        <div class="col-md-3">
-          <a href="//www.bluehost.com/track/cdnjs/intro" target="_blank">
-            <img id="intro-image" border="0" src="//bluehost-cdn.com/media/partner/images/cdnjs/189x116/bh-ppc-banners-dynamic-189x116.png">
-          </a>
+        <div class="col-md-4">
+
+      <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js" async></script>
         </div>
       </div>
        <div class="input-group version-dropdown">
