update templates/library.html && webServer.js
To use the new structure of packages.min.json to show the auto-update label

and also add a link for the label to its auto-update source

currently we support two types: git and npm.

close #95, cc cdnjs/cdnjs@7b257454846c1321a897cda1d3c74c0ec0be27e1

--- a/templates/library.html
+++ b/templates/library.html
@@ -11,7 +11,7 @@
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
         <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}">cdnjs api</a></li>
-        <li class="label label-default label-highlight">{{library.autoupdateEnabled}}</li>
+        <a href="{{library.autoupdate.url}}"><li class="label label-default label-highlight">{{library.autoupdate.string}}</li></a>
         {{#library.urls}}
         <li class="label label-default label-highlight"><a href="{{url}}">repository</a></li>
         {{/library.urls}}
