add gitter sidecar, close #98

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -83,6 +83,12 @@ $('.post').show();
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
 
 <script>hljs.initHighlightingOnLoad();</script>
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'cdnjs/cdnjs'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 </body>
 
   </body>
