--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
+    <style>.gitter-open-chat-button{background-color:#dd4814}</style>
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
   </head>
 
