use https for cdnjs.com in templates/newsfeed_item.html

--- a/templates/newsfeed_item.html
+++ b/templates/newsfeed_item.html
@@ -28,7 +28,7 @@
     var disqus_shortname = 'cdnjsweb'; // required: replace example with your forum shortname
     var disqus_identifier = '{{_id}}';
     var disqus_title = '{{slug}}';
-    var disqus_url = 'http://cdnjs.com/news/{{_id}}/{{slug}}';
+    var disqus_url = 'https://cdnjs.com/news/{{_id}}/{{slug}}';
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
