use gitter sidecar lib from cdnjs

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -89,6 +89,6 @@ $('.post').show();
     room: 'cdnjs/cdnjs'
   };
 </script>
-<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.2/sidecar.js" async defer></script>
 </body>
 </html>
