--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,13 @@
       {{{page}}}
 
     </div>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">
+          Follow <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=peterdavehello&tw_p=followbutton"><i class="fa fa-twitter"></i> @Peter Dave Hello</a> and <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=cdnjs&tw_p=followbutton"><i class="fa fa-twitter"></i> @cdnjs</a> on twitter to get latest news about cdnjs!
+        </p>
+      </div>
+    </footer>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"></script>
