--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,4 +1,18 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 25px;
+  background-color: #f5f5f5;
+}
+
 body {
+  margin-bottom: 25px;
   overflow-y: scroll;
 }
 
