--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -6,8 +6,8 @@ html {
 .footer {
   position: absolute;
   bottom: 0;
+  padding-top: 7px;
   width: 100%;
-  height: 25px;
   background-color: #f5f5f5;
 }
 
