--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -104,7 +104,7 @@ p > code.hljs {
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
 
-            <p style="margin-bottom: 50px;">Do you think w3schools sucks? Do you think you could do a way better job? <br /> Now you can! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
+            <p style="margin-bottom: 50px;">Do you think w3schools not help? Do you think you could do a way better job? <br /> Now you can! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
                     <tr>
