Improve readability for our users.
Includes a few tweaks to some copy.

--- a/templates/library.html
+++ b/templates/library.html
@@ -60,7 +60,7 @@
         <h3>Related Tutorials</h3>
         
 
-            <p style="margin-bottom: 50px;">Do you think w3schools not help? Do you think you could do a way better job? <br /> Now you can! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
+            <p style="margin-bottom: 50px;">Help us write awesome web development tutorials! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
       {{#tutorialsPresent}}
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
