add link for spdy

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=new-website&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       </p><p>
-      <span>Supports <a href="https://http2.github.io"><strong>http/2.0</strong></a>http/https/spdy, we encourage always using <strong>https</strong>!
+      <span>Supports <a href="https://http2.github.io"><strong>http/2.0</strong></a>http/https/<a href="https://en.wikipedia.org/wiki/SPDY">spdy</a>, we encourage always using <strong>https</strong>!
       <br /><span>Currently used by ~1,143,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
     </p>
 
