add add links to gitstats/git_stats

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,6 +39,8 @@
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
             <li><a href="https://github.com/cdnjs/cdnjs/issues">Issues</a></li>
            <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
+            <li class=""><a href="/git_stats/general.html" title="~2015">git_stats</a></li>
+            <li class=""><a href="/gitstats/" title="~2015">gitstats</a></li>
             <li class=""><a href="/about" class="translateit">About</a></li>
             <li class=""><a href="/libraries" class="translateit">Browse Libraries</a></li>
             </ul>
