--- a/templates/library.html
+++ b/templates/library.html
@@ -10,7 +10,7 @@
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
-        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}">cdnjs api</a> <a href="https://api.cdnjs.com/libraries/{{library.name}}/humanReadable"><i class="fa fa-user"></i></a></li>
+        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}">cdnjs api</a> <a href="https://api.cdnjs.com/libraries/{{library.name}}?output=human"><i class="fa fa-user"></i></a></li>
         <a href="{{library.autoupdate.url}}"><li class="label label-default label-highlight">{{library.autoupdate.string}}</li></a>
         {{#library.urls}}
         <li class="label label-default label-highlight"><a href="{{url}}">repository</a></li>
