update layout, separate css out

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,12 +22,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
-    <style>.gitter-open-chat-button{background-color:#dd4814;bottom:36px}</style>
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
   </head>
 
   <body>
-    <style>#forkongithub a{background:#dd4814;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:orange;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:1333px){#forkongithub{position:absolute;display:block;top:0;left:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#forkongithub a{width:200px;position:absolute;top:30px;left:-45px;transform:rotate(315deg);-webkit-transform:rotate(315deg);-ms-transform:rotate(315deg);-moz-transform:rotate(315deg);-o-transform:rotate(315deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}</style><span id="forkongithub"><a href="https://goo.gl/2oDsTg">Fork me on GitHub</a></span>
+    <span id="forkongithub"><a href="https://goo.gl/2oDsTg">Fork me on GitHub</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
