Add prompt of links on lib page

--- a/templates/library.html
+++ b/templates/library.html
@@ -10,12 +10,12 @@
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
-        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}">cdnjs api</a> <a href="https://api.cdnjs.com/libraries/{{library.name}}?output=human"><i class="fa fa-user"></i></a></li>
-        <a href="{{library.autoupdate.url}}"><li class="label label-default label-highlight">{{library.autoupdate.string}}</li></a>
+        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}" title="api url of {{library.name}} on cdnjs">cdnjs api</a> <a href="https://api.cdnjs.com/libraries/{{library.name}}?output=human" title="Human readable api output of {{library.name}}"><i class="fa fa-user"></i></a></li>
+        <a href="{{library.autoupdate.url}}" title="{{library.name}} has auto-update config, this is the link to upstream, click to checkout lastest version on official page."><li class="label label-default label-highlight">{{library.autoupdate.string}}</li></a>
         {{#library.urls}}
-        <li class="label label-default label-highlight"><a href="{{url}}">repository</a></li>
+        <li class="label label-default label-highlight"><a href="{{url}}" title="Link to {{library.name}}'s source code page.">repository</a></li>
         {{/library.urls}}
-        {{#licenses}}<li class="label label-default label-highlight"><a href="{{url}}">{{type}} license</a></li>{{/licenses}}
+        {{#licenses}}<li class="label label-default label-highlight"><a href="{{url}}" title="License info of {{library.name}}, click to see datail.">{{type}} license</a></li>{{/licenses}}
       </p>
       <p>{{library.description}}</p>
       <em>{{library.keywords}}</em>
