update wording in about
we only host the lib with notable popularity, not all the libs.

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     
       <span>Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
       <br><span>The problem is, they only host the most popular libraries.</span>
-      <br><span>We host it all - JavaScript, CSS, SWF, images, etc!</span>
+      <br><span>We host all the popular libraries - JavaScript, CSS, SWF, images, etc!</span>
       <br><span>Join us now on GitHub!</span><br>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
