--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="https://goo.gl/0pRcOk">Request a lib</a></li>
+            <li><a href="https://goo.gl/VBLhp9">Request a lib</a></li>
             <li><a href="https://gitter.im/cdnjs/cdnjs">Chat</a></li>
             <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
