--- a/templates/about.html
+++ b/templates/about.html
@@ -25,25 +25,25 @@
         <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
       </ul>
     </div>
-    <h3 class="translateit">Sponsors</h3>
+    <h3>Sponsors</h3>
     <div class="sponsors">
 
 <a href="http://cloudflare.com">
   <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
 </a>
 <br />
-      <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
+      <p>At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
       <br />
-          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
+          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span >Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
       <br />
       <a href="https://www.algolia.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
         <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" height="40"/>
       </a>
-      <p class="translateit">Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
+      <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <!--
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
     </div>
-    <h3 class="translateit">Media</h3>
+    <h3>Media</h3>
     <div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" allowfullscreen></iframe>
     </div>
