--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -72,7 +72,7 @@ p > code.hljs {
     <div class="col-md-10 col-md-offset-1">
       <div class="row">
         <div class="col-md-2">
-          <img src="{{avatar}}" class="" style="width: 100%; border-radius: 3px;" />
+          <img src="{{avatar}}" style="width: 100%; border-radius: 3px;" />
         </div>
         <div class="col-md-10">
           <p><strong>{{author.name}}</strong>
