use dropdown menu for git stats links

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,8 +39,19 @@
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
             <li><a href="https://github.com/cdnjs/cdnjs/issues">Issues</a></li>
            <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
-            <li><a href="/git_stats/general.html" title="~2015">git_stats</a></li>
-            <li><a href="/gitstats/" title="~201601">gitstats</a></li>
+            <li class="">
+              <div class="btn-group">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                  git stats
+                <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-header">main repo</li>
+                  <li><a href="/git_stats/general.html" title="~2015">git_stats</a></li>
+                  <li><a href="/gitstats/" title="~201601">gitstats</a></li>
+                </ul>
+              </div>
+            </li>
             <li><a href="/about">About</a></li>
             <li><a href="/libraries">Browse Libraries</a></li>
             </ul>
