--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,3 +5,4 @@
 .btn {font-size: inherit;    padding: 0px 0px;}
 .dropdown-menu > li > a, .btn:hover, .btn:focus, .btn.focus {color:#dd4814}
 .dropdown-menu{ min-width: 0px; }
+ul.dropdown-menu > li { float: left; }
