add link to gource visualization on youtube

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,6 +52,18 @@
                 </ul>
               </div>
             </li>
+            <li class="">
+              <div class="btn-group">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                  gource
+                <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="https://youtu.be/ehwK-KM4uYQ">main repo</a></li>
+                  <li><a href="https://youtu.be/GLH7Ovzi5z8">new-website</a></li>
+                </ul>
+              </div>
+            </li>
             <li><a href="/libraries">Browse Libraries</a></li>
             <li><a href="/about">About</a></li>
             </ul>
