useless translateit class cleanup

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <div class="container" style="text-align: center;">
     <form class="form login-form">
-      <h2 class="form-heading translateit">Login to cdnjs</h2>
+      <h2 class="form-heading">Login to cdnjs</h2>
       <p>Save your
         <strong>favorites</strong> for easy access | Receive important system
         <strong>notifications | </strong>Create your own
