--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 <div class="container" style="text-align: center;">
   <form class="form" onsubmit="return signup()">
-    <h2 class="form-heading translateit">Sign up for cdnjs</h2>
+    <h2 class="form-heading">Sign up for cdnjs</h2>
     <p>Save your
       <strong>favorites</strong> for easy access | Receive important system
       <strong>notifications | </strong>Create your own
@@ -18,7 +18,7 @@
       <input id="password" type="password" class="form-control" placeholder="Password" required>
       <br />
     </div>
-    <button class="btn btn-lg btn-info btn-block translateit" type="submit">Create my account</button>
+    <button class="btn btn-lg btn-info btn-block" type="submit">Create my account</button>
     <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
   </form>
   <p>
