update gource video menu

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -61,6 +61,11 @@
                 <ul class="dropdown-menu">
                   <li><a href="https://youtu.be/ehwK-KM4uYQ">main repo</a></li>
                   <li><a href="https://youtu.be/GLH7Ovzi5z8">new-website</a></li>
+                  <li><a href="https://youtu.be/Xe5s7fQQdwc">auto-updater</a></li>
+                  <li><a href="https://youtu.be/RUYALTcLkyU">importer</a></li>
+                  <li><a href="https://youtu.be/kc0DZWJAZm4">buildScript</a></li>
+                  <li><a href="https://youtu.be/OHQC1saKU_A">atom-extension</a></li>
+                  <li><a href="https://youtu.be/T6ZoTbRX1-A">tutorials</a></li>
                 </ul>
               </div>
             </li>
