mv gitstats, git_stats to gitstats/cdnjs, git_stats/cdnjs

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,8 +47,8 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-header">main repo</li>
-                  <li><a href="/git_stats/general.html" title="~2015">git_stats</a></li>
-                  <li><a href="/gitstats/" title="~201601">gitstats</a></li>
+                  <li><a href="/git_stats/cdnjs/general.html" title="~2015">git_stats</a></li>
+                  <li><a href="/gitstats/cdnjs/" title="~201601">gitstats</a></li>
                 </ul>
               </div>
             </li>
