--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,8 +47,26 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-header">main repo</li>
-                  <li><a href="/git_stats/cdnjs/general.html" title="~2015">git_stats</a></li>
-                  <li><a href="/gitstats/cdnjs/" title="~201601">gitstats</a></li>
+                  <li><a href="/git_stats/cdnjs/general.html" title="~2015">main repo git_stats</a></li>
+                  <li><a href="/gitstats/cdnjs/" title="~201601"> main repo gitstats</a></li>
+                  <li class="dropdown-header">new-website</li>
+                  <li><a href="/git_stats/new-website/general.html" title="~201602">new-website git_stats</a></li>
+                  <li><a href="/gitstats/new-website/" title="~201602"> new-website gitstats</a></li>
+                  <li class="dropdown-header">auto-updater</li>
+                  <li><a href="/git_stats/autoupdate/general.html" title="~201602">autoupdate git_stats</a></li>
+                  <li><a href="/gitstats/autoupdate/" title="~201602"> autoupdate gitstats</a></li>
+                  <li class="dropdown-header">importer</li>
+                  <li><a href="/git_stats/cdnjs-importer/general.html" title="~201602">cdnjs-importer git_stats</a></li>
+                  <li><a href="/gitstats/cdnjs-importer/" title="~201602"> cdnjs-importer gitstats</a></li>
+                  <li class="dropdown-header">buildScript</li>
+                  <li><a href="/git_stats/buildScript/general.html" title="~201602">buildScript git_stats</a></li>
+                  <li><a href="/gitstats/buildScript/" title="~201602"> buildScript gitstats</a></li>
+                  <li class="dropdown-header">atom-extension</li>
+                  <li><a href="/git_stats/atom-extension/general.html" title="~201602">atom-extension git_stats</a></li>
+                  <li><a href="/gitstats/atom-extension/" title="~201602"> atom-extension gitstats</a></li>
+                  <li class="dropdown-header">tutorials</li>
+                  <li><a href="/git_stats/tutorials/general.html" title="~201602">tutorials git_stats</a></li>
+                  <li><a href="/gitstats/tutorials/" title="~201602"> tutorials gitstats</a></li>
                 </ul>
               </div>
             </li>
