--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
+    <link rel="dns-prefetch" href="//goo.gl" />
   </head>
 
   <body>
