add "Support us!" menu in layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,6 +87,20 @@
                 </ul>
               </div>
             </li>
+            <li class="">
+              <div class="btn-group">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                  Support us!
+                <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="https://www.bountysource.com/teams/cdnjs"></a>via Bountysource</li>
+                  <li><a href="https://gratipay.com/cdnjs/"></a>via Gratipay</li>
+                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs"></a>via tip4commit</li>
+                  <li><a href="https://twitter.com/cdnjs"></a>Contact us!</li>
+                </ul>
+              </div>
+            </li>
             <li><a href="/libraries">Browse Libraries</a></li>
             <li><a href="/about">About</a></li>
             </ul>
