--- a/templates/layout.html
+++ b/templates/layout.html
@@ -94,9 +94,9 @@
                 <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://www.bountysource.com/teams/cdnjs"></a>via Bountysource</li>
-                  <li><a href="https://gratipay.com/cdnjs/"></a>via Gratipay</li>
-                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs"></a>via tip4commit</li>
+                  <li><a href="https://www.bountysource.com/teams/cdnjs"></a>Bountysource</li>
+                  <li><a href="https://gratipay.com/cdnjs/"></a>Gratipay</li>
+                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs"></a>tip4commit</li>
                   <li><a href="https://twitter.com/cdnjs"></a>Contact us!</li>
                 </ul>
               </div>
