update "Support us!" menu again.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -94,10 +94,10 @@
                 <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://www.bountysource.com/teams/cdnjs"></a>Bountysource</li>
-                  <li><a href="https://gratipay.com/cdnjs/"></a>Gratipay</li>
-                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs"></a>tip4commit</li>
-                  <li><a href="https://twitter.com/cdnjs"></a>Contact us!</li>
+                  <li><a href="https://www.bountysource.com/teams/cdnjs">via Bountysource</a></li>
+                  <li><a href="https://gratipay.com/cdnjs/">via Gratipay</a></li>
+                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs">via tip4commitM</a></li>
+                  <li><a href="https://twitter.com/cdnjs">Contact us!</a></li>
                 </ul>
               </div>
             </li>
