--- a/templates/layout.html
+++ b/templates/layout.html
@@ -96,7 +96,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="https://www.bountysource.com/teams/cdnjs">via Bountysource</a></li>
                   <li><a href="https://gratipay.com/cdnjs/">via Gratipay</a></li>
-                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs">via tip4commitM</a></li>
+                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs">via tip4commit</a></li>
                   <li><a href="https://twitter.com/cdnjs">Contact us!</a></li>
                 </ul>
               </div>
