--- a/templates/layout.html
+++ b/templates/layout.html
@@ -120,17 +120,17 @@
         </p>
       </div>
     </footer>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-tooltip.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.10.2/algoliasearch.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js" async></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" defer></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js" defer></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-tooltip.min.js" defer></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js" defer></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.10.2/algoliasearch.min.js" defer></script>
+  <script src="/js/main.js" defer></script>
 
-    <script src="//static.getclicky.com/js"></script>
-    <script type="text/javascript">try{clicky.init(66376315);}catch(err){}</script>
+    <script src="//static.getclicky.com/js" defer></script>
+    <script type="text/javascript" defer>try{clicky.init(66376315);}catch(err){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66376315ns.gif" /></p></noscript>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -150,7 +150,7 @@ $('.post > pre > code').wrapInner('<div class="container"><div class="row"><div 
 $('.post code').addClass('hljs');
 $('.post').show();
     </script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js" defer></script>
 
 <script>hljs.initHighlightingOnLoad();</script>
 <script>
