--- a/templates/library.html
+++ b/templates/library.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md-4">
 
-      <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js" async></script>
+      <script type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js" defer></script>
         </div>
       </div>
        <div class="input-group version-dropdown">
