adj script async/defer attribute again

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -120,7 +120,7 @@
         </p>
       </div>
     </footer>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js" async></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" defer></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js" defer></script>
@@ -150,14 +150,14 @@ $('.post > pre > code').wrapInner('<div class="container"><div class="row"><div 
 $('.post code').addClass('hljs');
 $('.post').show();
     </script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js" defer></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 
-<script>hljs.initHighlightingOnLoad();</script>
-<script>
+<script defer>hljs.initHighlightingOnLoad();</script>
+<script defer>
   ((window.gitter = {}).chat = {}).options = {
     room: 'cdnjs/cdnjs'
   };
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.3/sidecar.js" async defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.3/sidecar.js" async></script>
 </body>
 </html>
