--- a/templates/library.html
+++ b/templates/library.html
@@ -45,7 +45,7 @@
           <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
             <tbody>
               {{#files}}
-              <tr class="library">
+              <tr class="library {{fileType}}-type">
                 <td class="library-column"  data-lib-name="{{library.name}}" style="position: relative;">
                   <p class='library-url'>https://cdnjs.cloudflare.com/ajax/libs/{{library.originalName}}/{{version}}/{{name}}</p>
                 </td>
@@ -56,7 +56,6 @@
         </div>
       {{/selectedAssets}}
         <h3>Related Tutorials</h3>
-        
 
             <p style="margin-bottom: 50px;">Help us write awesome web development tutorials! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
       {{#tutorialsPresent}}
