make some links to open new window

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,16 +28,16 @@
   </head>
 
   <body>
-    <span id="forkongithub"><a href="https://goo.gl/2oDsTg">Fork me on GitHub</a></span>
+    <span id="forkongithub"><a href="https://goo.gl/2oDsTg" target="_blank">Fork me on GitHub</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="https://goo.gl/VBLhp9">Request a lib</a></li>
-            <li><a href="https://gitter.im/cdnjs/cdnjs">Chat</a></li>
-            <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
-            <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
+            <li><a href="https://goo.gl/VBLhp9" target="_blank">Request a lib</a></li>
+            <li><a href="https://gitter.im/cdnjs/cdnjs" target="_blank">Chat</a></li>
+            <li><a href="https://www.cloudflare.com/network-map" target="_blank">Network</a></li>
+            <li><a href="http://stats.pingdom.com/4jg86a2wqei0" target="_blank">Uptime</a></li>
            <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
             <li class="">
               <div class="btn-group">
@@ -47,26 +47,26 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-header">main repo</li>
-                  <li><a href="/git_stats/cdnjs/general.html" title="~201604">git_stats</a></li>
-                  <li><a href="/gitstats/cdnjs/" title="~201604">gitstats</a></li>
+                  <li><a href="/git_stats/cdnjs/general.html" title="~201604" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/cdnjs/" title="~201604" target="_blank">gitstats</a></li>
                   <li class="dropdown-header">new-website</li>
-                  <li><a href="/git_stats/new-website/general.html" title="~201604">git_stats</a></li>
-                  <li><a href="/gitstats/new-website/" title="~201604">gitstats</a></li>
+                  <li><a href="/git_stats/new-website/general.html" title="~201604" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/new-website/" title="~201604" target="_blank">gitstats</a></li>
                   <li class="dropdown-header">auto-updater</li>
-                  <li><a href="/git_stats/autoupdate/general.html" title="~201602">git_stats</a></li>
-                  <li><a href="/gitstats/autoupdate/" title="~201602">gitstats</a></li>
+                  <li><a href="/git_stats/autoupdate/general.html" title="~201602" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/autoupdate/" title="~201602" target="_blank">gitstats</a></li>
                   <li class="dropdown-header">importer</li>
-                  <li><a href="/git_stats/cdnjs-importer/general.html" title="~201602">git_stats</a></li>
-                  <li><a href="/gitstats/cdnjs-importer/" title="~201602">gitstats</a></li>
+                  <li><a href="/git_stats/cdnjs-importer/general.html" title="~201602" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/cdnjs-importer/" title="~201602" target="_blank">gitstats</a></li>
                   <li class="dropdown-header">buildScript</li>
-                  <li><a href="/git_stats/buildScript/general.html" title="~201602">git_stats</a></li>
-                  <li><a href="/gitstats/buildScript/" title="~201602">gitstats</a></li>
+                  <li><a href="/git_stats/buildScript/general.html" title="~201602" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/buildScript/" title="~201602" target="_blank">gitstats</a></li>
                   <li class="dropdown-header">atom-extension</li>
-                  <li><a href="/git_stats/atom-extension/general.html" title="~201602">git_stats</a></li>
-                  <li><a href="/gitstats/atom-extension/" title="~201602">gitstats</a></li>
+                  <li><a href="/git_stats/atom-extension/general.html" title="~201602" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/atom-extension/" title="~201602" target="_blank">gitstats</a></li>
                   <li class="dropdown-header">tutorials</li>
-                  <li><a href="/git_stats/tutorials/general.html" title="~201602">git_stats</a></li>
-                  <li><a href="/gitstats/tutorials/" title="~201602">gitstats</a></li>
+                  <li><a href="/git_stats/tutorials/general.html" title="~201602" target="_blank">git_stats</a></li>
+                  <li><a href="/gitstats/tutorials/" title="~201602" target="_blank">gitstats</a></li>
                 </ul>
               </div>
             </li>
@@ -77,13 +77,13 @@
                 <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://youtu.be/ehwK-KM4uYQ">main repo</a></li>
-                  <li><a href="https://youtu.be/GLH7Ovzi5z8">new-website</a></li>
-                  <li><a href="https://youtu.be/Xe5s7fQQdwc">auto-updater</a></li>
-                  <li><a href="https://youtu.be/RUYALTcLkyU">importer</a></li>
-                  <li><a href="https://youtu.be/kc0DZWJAZm4">buildScript</a></li>
-                  <li><a href="https://youtu.be/OHQC1saKU_A">atom-extension</a></li>
-                  <li><a href="https://youtu.be/T6ZoTbRX1-A">tutorials</a></li>
+                  <li><a href="https://youtu.be/ehwK-KM4uYQ" target="_blank">main repo</a></li>
+                  <li><a href="https://youtu.be/GLH7Ovzi5z8" target="_blank">new-website</a></li>
+                  <li><a href="https://youtu.be/Xe5s7fQQdwc" target="_blank">auto-updater</a></li>
+                  <li><a href="https://youtu.be/RUYALTcLkyU" target="_blank">importer</a></li>
+                  <li><a href="https://youtu.be/kc0DZWJAZm4" target="_blank">buildScript</a></li>
+                  <li><a href="https://youtu.be/OHQC1saKU_A" target="_blank">atom-extension</a></li>
+                  <li><a href="https://youtu.be/T6ZoTbRX1-A" target="_blank">tutorials</a></li>
                 </ul>
               </div>
             </li>
@@ -94,10 +94,10 @@
                 <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://www.bountysource.com/teams/cdnjs">via Bountysource</a></li>
-                  <li><a href="https://gratipay.com/cdnjs/">via Gratipay</a></li>
-                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs">via tip4commit</a></li>
-                  <li><a href="https://twitter.com/cdnjs">Contact us!</a></li>
+                  <li><a href="https://www.bountysource.com/teams/cdnjs" target="_blank">via Bountysource</a></li>
+                  <li><a href="https://gratipay.com/cdnjs/" target="_blank">via Gratipay</a></li>
+                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs" target="_blank">via tip4commit</a></li>
+                  <li><a href="https://twitter.com/cdnjs" target="_blank">Contact us!</a></li>
                 </ul>
               </div>
             </li>
