update link of cloudflare in about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,7 +28,7 @@
     <h3>Sponsors</h3>
     <div class="sponsors">
 
-<a href="http://cloudflare.com">
+<a href="https://cloudflare.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs">
   <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
 </a>
 <br />
