added link to cdnjs sub reddit

--- a/templates/library.html
+++ b/templates/library.html
@@ -76,6 +76,10 @@
                 </tbody>
             </table>
           {{/tutorialsPresent}}
+        <p style="line-height: 50px;margin: auto;width: 500px;margin-bottom: 50px;"><img src="http://i.imgur.com/02e22RT.gif" style="width: 50px;" />
+          Join us at our newly credated subreddit ->
+          <a href="https://www.reddit.com/r/cdnjs/">/r/cdnjs</a>
+        </p>
 </div>
 </div>
 </div>
