update wording about the "tutorial"

--- a/templates/library.html
+++ b/templates/library.html
@@ -57,7 +57,7 @@
       {{/selectedAssets}}
         <h3>Related Tutorials</h3>
 
-            <p style="margin-bottom: 50px;">Help us write awesome web development tutorials! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
+            <p style="margin-bottom: 50px;">Write your own awesome web development tutorials for the libraries on CDNJS! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your community driven tutorials now!</a></p>
       {{#tutorialsPresent}}
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
