--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -104,7 +104,7 @@ p > code.hljs {
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
 
-            <p style="margin-bottom: 50px;">Help us write awesome web development tutorials! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
+            <p style="margin-bottom: 50px;">Write your own awesome web development tutorials for the libraries on CDNJS! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your community driven tutorials now!</a></p>
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
                     <tr>
