--- a/templates/library.html
+++ b/templates/library.html
@@ -47,7 +47,7 @@
               {{#files}}
               <tr class="library {{fileType}}-type">
                 <td class="library-column"  data-lib-name="{{library.name}}" style="position: relative;">
-                  <p class='library-url'>https://cdnjs.cloudflare.com/ajax/libs/{{library.originalName}}/{{version}}/{{name}}</p>
+                  <p class='library-url'>{{library.originalName}}/{{version}}/{{name}}</p>
                 </td>
               </tr>
               {{/files}}
