add CDN provider option in library/libraries page

--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -9,7 +9,12 @@
   <div class="col-md-12">
     <div>
       <div class="packages-table-container">
-
+       <div class="input-group version-dropdown">
+          <div class="input-group-addon">CDN provider</div>
+          <select class="form-control cdn-provider-selector" style="float: right;" disabled>
+            <option value="cloudflare" selected>CloudFlare</option>
+          </select>
+        </div>
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
