missing part of dynamic urls generate

--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -38,7 +38,7 @@
                 </td>
                 <td style="padding: 0; width: 100%;">
                   <div style="position: relative; padding: 8px;" data-lib-name="{{name}}" class="library-column {{fileType}}-type">
-                    <p itemprop="downloadUrl" class="library-url" style="padding: 0; margin: 0">https://cdnjs.cloudflare.com/ajax/libs/{{originalName}}/{{version}}/{{filename}}</p>
+                    <p itemprop="downloadUrl" class="library-url" style="padding: 0; margin: 0">{{originalName}}/{{version}}/{{filename}}</p>
                   </div>
                 </td>
               </tr>
