--- a/templates/about.html
+++ b/templates/about.html
@@ -42,7 +42,7 @@
       <a href="https://www.keycdn.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
         <img alt="KeyCDN" style="margin-bottom: 20px;" src="/img/keycdn.png" width="212" height="62" />
       </a>
-      <p>KeyCDN is a high-performance CDN with a RESTful API ideal for developers. The CDN offers real-time stats and raw logs. Free custom SSL is avaiable based on Let's Encrypt. Instant purge makes sure that content is never outdated.</p>
+      <p>KeyCDN is a high-performance CDN with a RESTful API ideal for developers. The CDN offers real-time stats and raw logs. Free custom SSL is available based on Let's Encrypt. Instant purge makes sure that content is never outdated.</p>
       <!--
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
     </div>
