--- a/templates/about.html
+++ b/templates/about.html
@@ -40,7 +40,7 @@
       <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <br />
       <a href="https://www.keycdn.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
-        <img alt="KeyCDN" style="margin-bottom: 20px;" src="/img/keycdn.png" width="212" height="62" />
+        <img alt="KeyCDN" style="margin-bottom: 20px;" src="/img/keycdn.svg" width="212" height="62" />
       </a>
       <p>KeyCDN is a high-performance CDN with a RESTful API ideal for developers. The CDN offers real-time stats and raw logs. Free custom SSL is available based on Let's Encrypt. Instant purge makes sure that content is never outdated.</p>
       <!--
