Fix HTTP request to i.imgur.com.

--- a/templates/library.html
+++ b/templates/library.html
@@ -78,7 +78,7 @@
                 </tbody>
             </table>
           {{/tutorialsPresent}}
-        <p style="line-height: 50px;margin: auto;width: 500px;margin-bottom: 50px;"><img src="http://i.imgur.com/02e22RT.gif" style="width: 50px;" />
+        <p style="line-height: 50px;margin: auto;width: 500px;margin-bottom: 50px;"><img src="https://i.imgur.com/02e22RT.gif" style="width: 50px;" />
           Join us on our newly created subreddit ->
           <a href="https://www.reddit.com/r/cdnjs/">/r/cdnjs</a>
         </p>
