implement meta tag keywords, fix #93

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,7 @@
     <meta property="og:description" content="{{description}}" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="{{description}}">
+    <meta name="keywords" content="{{keywords}}">
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
