--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{title}}</title>
     <meta property="og:title" content="{{title}}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cdnjs.com{{{url}}}" />
     <meta property="og:image" content="/img/logotext.png" />
     <meta property="og:description" content="{{description}}" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
